# strutil

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  LICENSE  README.md  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  doxygen_crawl.html  files.html  genindex.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestrutil.html  objects.inv  pages.html  search.html  searchindex.js  sitemap.xml  strutil.h  strutil.html  strutil_8h.html  strutil_8h_source.html  wstrutil.h
.github/workflows/: cpp_cmake.yml  docs.yml  docs_mkdocs.yml
_sources/: index.rst.txt
docs/: Doxyfile.in  Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/source/: strutil.rst
docs/strutil/: mkdocs.yml
docs/strutil/docs/: index.md
tests/: strutil_tests.cpp  test_cases.cpp
